Replace existing site with new responsive version
This update replaces all the existing HTML and CSS with the new responsive VDOape site.

--- a/writings.html
+++ b/writings.html
@@ -1,135 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Writings | VDO.ape</title>
-  <link rel="stylesheet" href="/style.css" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #fff;
-      color: #111;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background-color: #f5f5f5;
-      padding: 20px;
-      text-align: center;
-    }
-
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-    }
-
-    h1 {
-      font-size: 2.5em;
-      margin: 40px 0 20px;
-      text-align: center;
-    }
-
-    .writings-container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    .writing-entry {
-      margin-bottom: 20px;
-      font-size: 1.1em;
-    }
-
-    .writing-entry a {
-      text-decoration: none;
-      color: #0044cc;
-    }
-
-    .writing-entry a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/works/index.html">Works</a>
-      <a href="/recognitions.html">Recognitions</a>
-      <a href="/writings.html">Writings</a>
-      <a href="/about.html">About</a>
-    </nav>
-  </header>
+<header>
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="ai-films.html">AI Films</a></li>
+    <li><a href="live-action.html">Live Action</a></li>
+    <li><a href="animation.html">Animation</a></li>
+    <li><a href="documentary.html">Documentary</a></li>
+    <li><a href="branded-content.html">Branded Content</a></li>
+    <li><a href="recognitions.html">Recognitions</a></li>
+    <li><a href="writings.html" class="active">Writings</a></li>
+    <li><a href="about.html">About</a></li>
+  </ul>
+</nav>
+</header>
+<main>
+<h1>Writings</h1>
+<p>Coming soon...</p>
 
-  <main>
-    <h1>Writings</h1>
-    <div class="writings-container">
+</main>
 
-      <div class="writing-entry"><a href="/writings/The Way.pdf" target="_blank">The Way</a></div>
-      <div class="writing-entry"><a href="/writings/A Picture of My Mother.pdf" target="_blank">A Picture of My Mother</a></div>
-      <div class="writing-entry"><a href="/writings/Convictions of One's Heart.pdf" target="_blank">Convictions of One's Heart</a></div>
-      <div class="writing-entry"><a href="/writings/Creativity and Memory.pdf" target="_blank">Creativity and Memory</a></div>
-      <div class="writing-entry"><a href="/writings/Decompression and Investigation of 충동 and 본능.pdf" target="_blank">Decompression and Investigation of 충동 and 본능</a></div>
-      <div class="writing-entry"><a href="/writings/Delusion and Intuition.pdf" target="_blank">Delusion and Intuition</a></div>
-      <div class="writing-entry"><a href="/writings/Determination.pdf" target="_blank">Determination</a></div>
-      <div class="writing-entry"><a href="/writings/Dice.pdf" target="_blank">Dice</a></div>
-      <div class="writing-entry"><a href="/writings/Doll Film, Shadow Cinema.pdf" target="_blank">Doll Film, Shadow Cinema</a></div>
-      <div class="writing-entry"><a href="/writings/Don't Believe in Drama.pdf" target="_blank">Don't Believe in Drama</a></div>
-      <div class="writing-entry"><a href="/writings/Dreams and Memories to Cinema.pdf" target="_blank">Dreams and Memories to Cinema</a></div>
-      <div class="writing-entry"><a href="/writings/Experience and Art.pdf" target="_blank">Experience and Art</a></div>
-      <div class="writing-entry"><a href="/writings/Happy Burning.pdf" target="_blank">Happy Burning</a></div>
-      <div class="writing-entry"><a href="/writings/Honesty of Truth.pdf" target="_blank">Honesty of Truth</a></div>
-      <div class="writing-entry"><a href="/writings/How Does a Movie Move?.pdf" target="_blank">How Does a Movie Move?</a></div>
-      <div class="writing-entry"><a href="/writings/Imposition of Life.pdf" target="_blank">Imposition of Life</a></div>
-      <div class="writing-entry"><a href="/writings/In Terms of the Feature Film.pdf" target="_blank">In Terms of the Feature Film</a></div>
-      <div class="writing-entry"><a href="/writings/Inferior Art.pdf" target="_blank">Inferior Art</a></div>
-      <div class="writing-entry"><a href="/writings/Landslide.pdf" target="_blank">Landslide</a></div>
-      <div class="writing-entry"><a href="/writings/Mark of Our Desertion.pdf" target="_blank">Mark of Our Desertion</a></div>
-      <div class="writing-entry"><a href="/writings/Mechanics of Instinct.pdf" target="_blank">Mechanics of Instinct</a></div>
-      <div class="writing-entry"><a href="/writings/Metaphor, Symbol, and Contemporary Art.pdf" target="_blank">Metaphor, Symbol, and Contemporary Art</a></div>
-      <div class="writing-entry"><a href="/writings/Metaphorical Cinema.pdf" target="_blank">Metaphorical Cinema</a></div>
-      <div class="writing-entry"><a href="/writings/No Camera No Cinema.pdf" target="_blank">No Camera No Cinema</a></div>
-      <div class="writing-entry"><a href="/writings/On “A Bride for Rip Van Winkle”.pdf" target="_blank">On “A Bride for Rip Van Winkle”</a></div>
-      <div class="writing-entry"><a href="/writings/On “A Moon Shaped Pool”.pdf" target="_blank">On “A Moon Shaped Pool”</a></div>
-      <div class="writing-entry"><a href="/writings/On Ghost in the Shell (2017).pdf" target="_blank">On Ghost in the Shell (2017)</a></div>
-      <div class="writing-entry"><a href="/writings/On Kaili Blues 路边野餐.pdf" target="_blank">On Kaili Blues 路边野餐</a></div>
-      <div class="writing-entry"><a href="/writings/On Maboroshi no Hikari 幻の光.pdf" target="_blank">On Maboroshi no Hikari 幻の光</a></div>
-      <div class="writing-entry"><a href="/writings/On Paris, Texas (1984).pdf" target="_blank">On Paris, Texas (1984)</a></div>
-      <div class="writing-entry"><a href="/writings/On Perfects Days (2023).pdf" target="_blank">On Perfects Days (2023)</a></div>
-      <div class="writing-entry"><a href="/writings/On the Aesthetics of Eastern Cinema.pdf" target="_blank">On the Aesthetics of Eastern Cinema</a></div>
-      <div class="writing-entry"><a href="/writings/On The Revenant (2016).pdf" target="_blank">On The Revenant (2016)</a></div>
-      <div class="writing-entry"><a href="/writings/One Does Not Become an American.pdf" target="_blank">One Does Not Become an American</a></div>
-      <div class="writing-entry"><a href="/writings/Out of Sentimentality for Film.pdf" target="_blank">Out of Sentimentality for Film</a></div>
-      <div class="writing-entry"><a href="/writings/Poetic Cinema.pdf" target="_blank">Poetic Cinema</a></div>
-      <div class="writing-entry"><a href="/writings/Postmodern Catastrophe.pdf" target="_blank">Postmodern Catastrophe</a></div>
-      <div class="writing-entry"><a href="/writings/Precedence of Language.pdf" target="_blank">Precedence of Language</a></div>
-      <div class="writing-entry"><a href="/writings/Reflecting on a Meeting.pdf" target="_blank">Reflecting on a Meeting</a></div>
-      <div class="writing-entry"><a href="/writings/Response to 유리병 속의 소녀.pdf" target="_blank">Response to 유리병 속의 소녀</a></div>
-      <div class="writing-entry"><a href="/writings/Sacrifice for the Sake of Life.pdf" target="_blank">Sacrifice for the Sake of Life</a></div>
-      <div class="writing-entry"><a href="/writings/Sad Films and Tragic Films.pdf" target="_blank">Sad Films and Tragic Films</a></div>
-      <div class="writing-entry"><a href="/writings/Skill, Technique and Belief.pdf" target="_blank">Skill, Technique and Belief</a></div>
-      <div class="writing-entry"><a href="/writings/Spontaneous Vagueness.pdf" target="_blank">Spontaneous Vagueness</a></div>
-      <div class="writing-entry"><a href="/writings/Super-Temporality and “Phantom Thread”.pdf" target="_blank">Super-Temporality and “Phantom Thread”</a></div>
-      <div class="writing-entry"><a href="/writings/The Art of Time_The Logic of Re-Cognition.pdf" target="_blank">The Art of Time_The Logic of Re-Cognition</a></div>
-      <div class="writing-entry"><a href="/writings/The Auteur of Cinema and Things.pdf" target="_blank">The Auteur of Cinema and Things</a></div>
-      <div class="writing-entry"><a href="/writings/The Beauty of B&W Cinematography.pdf" target="_blank">The Beauty of B&W Cinematography</a></div>
-      <div class="writing-entry"><a href="/writings/The Intrinsic Nature of Cinema.pdf" target="_blank">The Intrinsic Nature of Cinema</a></div>
-      <div class="writing-entry"><a href="/writings/The Logic of Unknown.pdf" target="_blank">The Logic of Unknown</a></div>
-      <div class="writing-entry"><a href="/writings/The Phenomenon of Infant.pdf" target="_blank">The Phenomenon of Infant</a></div>
-      <div class="writing-entry"><a href="/writings/The Staircase.pdf" target="_blank">The Staircase</a></div>
-      <div class="writing-entry"><a href="/writings/The Thing of the Past.pdf" target="_blank">The Thing of the Past</a></div>
-      <div class="writing-entry"><a href="/writings/Want and Do.pdf" target="_blank">Want and Do</a></div>
-      <div class="writing-entry"><a href="/writings/What One Believes.pdf" target="_blank">What One Believes</a></div>
-      <div class="writing-entry"><a href="/writings/Why Celluloid is Essential to Cinema.pdf" target="_blank">Why Celluloid is Essential to Cinema</a></div>
-      <div class="writing-entry"><a href="/writings/Within the Rectangle.pdf" target="_blank">Within the Rectangle</a></div>
-      <div class="writing-entry"><a href="/writings/Yet Another Clarity of Art Through Sports.pdf" target="_blank">Yet Another Clarity of Art Through Sports</a></div>
-
-    </div>
-  </section>
-
+<footer>
+  <p>Contact: lx_kang@naver.com | +86-173-2117-6604 | WeChat: lx_kang4</p>
+  <p>&copy;2025 Alexander Kang. All Rights Reserved.</p>
+</footer>
 </body>
 </html>
