--- a/about.html
+++ b/about.html
@@ -1,82 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About – VDO.ape</title>
-  <link rel="stylesheet" href="/style.css" />
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 40px;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    nav {
-      margin-bottom: 30px;
-    }
-
-    nav a {
-      margin-right: 20px;
-      text-decoration: none;
-      color: black;
-      font-weight: bold;
-    }
-
-    img.profile {
-      width: 200px;
-      border-radius: 10px;
-      margin-bottom: 20px;
-    }
-
-    .contact {
-      margin-top: 20px;
-      line-height: 1.6;
-    }
-
-    .cv-button {
-      margin-top: 30px;
-    }
-
-    .cv-button a {
-      text-decoration: none;
-      background: black;
-      color: white;
-      padding: 10px 15px;
-      border-radius: 5px;
-      font-size: 16px;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About | VDO.ape</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav>
-    <a href="/index.html">Home</a>
-    <a href="/works/ai-films.html">Works</a>
-    <a href="/recognitions.html">Recognitions</a>
-    <a href="/writings.html">Writings</a>
-    <a href="/about.html">About</a>
-  </nav>
+<header>
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="ai-films.html">AI Films</a></li>
+    <li><a href="live-action.html">Live Action</a></li>
+    <li><a href="animation.html">Animation</a></li>
+    <li><a href="documentary.html">Documentary</a></li>
+    <li><a href="branded-content.html">Branded Content</a></li>
+    <li><a href="recognitions.html">Recognitions</a></li>
+    <li><a href="writings.html">Writings</a></li>
+    <li><a href="about.html" class="active">About</a></li>
+  </ul>
+</nav>
+</header>
+<main>
+<h1>About VDO.ape</h1>
+<p>VDO.ape = "video" + "guerrilla filmmaking"</p>
+<p>This is my nickname. I create and support films that are made in order to push the medium of cinema. Those who don't wait for permissions to make films are welcome to collaborate.</p>
 
-  <img src="images/Profile.jpg" alt="Alexander Kang" class="profile" />
-  <h1>Alexander Kang / VDO.ape</h1>
-  <p>
-    Alexander grew up in Korea, later moved to the U.S.A., and has been living and working in Shanghai, China as a content video director who creates branded, documentary, animation, and AI films.
-  </p>
-  <p>
-    Although his work revolves around filmmaking, he views “film” as just one medium out of many through which we tell stories.
-  </p>
+</main>
 
-  <div class="contact">
-    <h3>Contact</h3>
-    <p>Email: <a href="mailto:lx_kang@naver.com">lx_kang@naver.com</a></p>
-    <p>Phone: +86-173-2117-6604</p>
-    <p>WeChat: lx_kang4</p>
-  </div>
-
-  <div class="cv-button">
-    <a href="/CV.pdf" target="_blank">Download CV / Portfolio</a>
-  </div>
+<footer>
+  <p>Contact: lx_kang@naver.com | +86-173-2117-6604 | WeChat: lx_kang4</p>
+  <p>&copy;2025 Alexander Kang. All Rights Reserved.</p>
+</footer>
 </body>
 </html>
