--- a/index.html
+++ b/index.html
@@ -1,48 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VDO.ape</title>
-
-  <!-- Google Font: Space Grotesk -->
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
-
-  <!-- Link to Custom CSS -->
-  <link rel="stylesheet" href="/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home | VDO.ape</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body style="margin: 0; background-color: #ff0000; font-family: 'Space Grotesk', sans-serif; color: white;">
+<body>
+<header>
+<nav>
+  <ul>
+    <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="ai-films.html">AI Films</a></li>
+    <li><a href="live-action.html">Live Action</a></li>
+    <li><a href="animation.html">Animation</a></li>
+    <li><a href="documentary.html">Documentary</a></li>
+    <li><a href="branded-content.html">Branded Content</a></li>
+    <li><a href="recognitions.html">Recognitions</a></li>
+    <li><a href="writings.html">Writings</a></li>
+    <li><a href="about.html">About</a></li>
+  </ul>
+</nav>
+</header>
+<main>
 
-  <!-- Header -->
-  <header class="nav">
-    <a href="/index.html">Home</a>
-    <a href="/works/">Works</a>
-    <a href="/recognitions.html">Recognitions</a>
-    <a href="/writings.html">Writings</a>
-    <a href="/about.html">About</a>
-  </header>
+<section class="hero">
+  <h1>The Native</h1>
+  <p>Our newest AI Short Film is here. It tackles one of my life's biggest questions: <em>where is home?</em></p>
+  <div class="video-wrapper" style="max-width: 800px; margin: 0 auto;">
+    <iframe src="https://www.youtube.com/embed/5NGSUvBVKS0" frameborder="0" allowfullscreen loading="lazy"></iframe>
+  </div>
+</section>
+<section class="intro">
+<p>VDO.ape = "video" + "guerrilla filmmaking"</p>
+<p>This is my nickname. I create and support films that are made in order to push the medium of cinema. Those who don't wait for permissions to make films are welcome to collaborate.</p>
+</section>
+</main>
 
-  <!-- Main Content -->
-  <main style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 4rem 1rem;">
-    <h1 style="font-size: 3rem; font-weight: 700; margin-bottom: 2rem;">This is...</h1>
-
-    <!-- Showreel Video -->
-    <div style="width: 80%; max-width: 960px;">
-      <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-        <iframe src="https://player.vimeo.com/video/991421399?title=0&byline=0&portrait=0"
-                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-                frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-      </div>
-    </div>
-  </main>
-
-  <!-- Footer -->
-  <footer class="footer">
-    <p>lx_kang@naver.com</p>
-    <p>+86-173-2117-6604</p>
-    <p>WeChat: lx_kang4</p>
-    <p>©2025 Alexander Kang. All Rights Reserved.</p>
-  </footer>
-
+<footer>
+  <p>Contact: lx_kang@naver.com | +86-173-2117-6604 | WeChat: lx_kang4</p>
+  <p>&copy;2025 Alexander Kang. All Rights Reserved.</p>
+</footer>
 </body>
 </html>
