Apply modern Bauhaus redesign: update about.html

--- a/about.html
+++ b/about.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About | VDO.ape</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About – VDO.ape</title>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
-<header>
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="ai-films.html">AI Films</a></li>
-    <li><a href="live-action.html">Live Action</a></li>
-    <li><a href="animation.html">Animation</a></li>
-    <li><a href="documentary.html">Documentary</a></li>
-    <li><a href="branded-content.html">Branded Content</a></li>
-    <li><a href="recognitions.html">Recognitions</a></li>
-    <li><a href="writings.html">Writings</a></li>
-    <li><a href="about.html" class="active">About</a></li>
-  </ul>
-</nav>
-</header>
-<main>
-<h1>About VDO.ape</h1>
-<p>VDO.ape = "video" + "guerrilla filmmaking"</p>
-<p>This is my nickname. I create and support films that are made in order to push the medium of cinema. Those who don't wait for permissions to make films are welcome to collaborate.</p>
+  <nav class="nav">
+    <a href="index.html">Home</a>
+    <a href="works/index.html">Works</a>
+    <a href="recognitions.html">Recognitions</a>
+    <a href="writings.html">Writings</a>
+    <a href="about.html" class="active">About</a>
+  </nav>
 
-</main>
-
-<footer>
-  <p>Contact: lx_kang@naver.com | +86-173-2117-6604 | WeChat: lx_kang4</p>
-  <p>&copy;2025 Alexander Kang. All Rights Reserved.</p>
-</footer>
+  <section class="about-page">
+    <h1>About</h1>
+    <div class="content">
+      <img src="assets/img/profile.jpg" alt="Profile" />
+      <div class="text">
+        <h2>Our Story</h2>
+        <p>
+          Founded by visionary filmmaker and designer VDO.Ape, our studio is dedicated to
+          pushing the boundaries of storytelling through a fusion of cinema, animation and
+          interactive art. Drawing on influences from modernist design, experimental film and
+          contemporary technology, we create work that is both bold and poetic.
+        </p>
+        <p>
+          We collaborate with artists, brands and institutions around the world to craft
+          immersive experiences that resonate with audiences and challenge conventions.
+        </p>
+        <a href="assets/CV-Portfolio.pdf" class="cv-download" target="_blank">Download CV</a>
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
+    <p>&copy; 2025 VDO.ape</p>
+  </footer>
 </body>
 </html>
