--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VDO.ape – Film Portfolio</title>
+  <!-- Google Fonts: Space Grotesk -->
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;700&display=swap" rel="stylesheet" />
+  <!-- Main Stylesheet -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Primary Navigation -->
   <nav class="nav">
     <a href="index.html" class="active">Home</a>
     <a href="works.html">Works</a>
@@ -16,6 +19,7 @@
     <a href="about.html">About</a>
   </nav>
 
+  <!-- Split Hero Section -->
   <section class="section-hero split-hero">
     <div class="hero-left">
       <h1 class="display-xxl">VDO.ape</h1>
@@ -27,11 +31,13 @@
     </div>
     <div class="hero-right">
       <div class="hero-video-frame">
+        <!-- Placeholder for Vimeo showreel (replace with actual embedded video or thumbnail) -->
         <img src="images/placeholder1.jpg" alt="Showreel thumbnail" />
       </div>
     </div>
   </section>
 
+  <!-- Teaser Section for Works -->
   <section class="works-teaser">
     <h2 class="section-heading">Featured Works</h2>
     <div class="teaser-grid">
@@ -59,10 +65,12 @@
     </div>
   </section>
 
+  <!-- Footer -->
   <footer class="footer">
     <p>&copy; 2025 VDO.ape</p>
   </footer>
 
+  <!-- JavaScript -->
   <script src="main.js"></script>
 </body>
 </html>
