Update home page: ensure hero video fills frame

--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 </head>
 <body>
   <!-- Primary Navigation -->
-    <nav class="nav">
-      <!-- Use root‑relative links so navigation works from any page -->
-      <a href="/" class="active">Home</a>
-      <a href="/works.html">Works</a>
-      <a href="/recognitions.html">Recognitions</a>
-      <a href="/writings.html">Writings</a>
-      <a href="/about.html">About</a>
-    </nav>
+  <nav class="nav">
+    <a href="/" class="active">Home</a>
+    <a href="/works.html">Works</a>
+    <a href="/recognitions.html">Recognitions</a>
+    <a href="/writings.html">Writings</a>
+    <a href="/about.html">About</a>
+  </nav>
 
   <!-- Split Hero Section -->
   <section class="section-hero split-hero">
@@ -32,44 +31,21 @@
     </div>
     <div class="hero-right">
       <div class="hero-video-frame">
-        <!-- Embed the Vimeo showreel directly. The iframe will fill the frame via CSS -->
+        <!-- Embed Vimeo showreel -->
         <iframe
           src="https://player.vimeo.com/video/991421399?title=0&byline=0&portrait=0"
           frameborder="0"
           allow="autoplay; fullscreen; picture-in-picture"
           allowfullscreen
+          width="100%"
+          height="100%"
+          style="width: 100%; height: 100%;"
         ></iframe>
       </div>
     </div>
   </section>
 
-  <!-- Teaser Section for Works -->
-  <section class="works-teaser">
-    <h2 class="section-heading">Featured Works</h2>
-    <div class="teaser-grid">
-      <a href="works.html" class="work-teaser-card">
-        <img src="images/placeholder2.jpg" alt="Work 1" />
-        <div class="teaser-caption">
-          <span class="category">AI Films</span>
-          <span class="title">Echoes of Tomorrow</span>
-        </div>
-      </a>
-      <a href="works.html" class="work-teaser-card">
-        <img src="images/placeholder3.jpg" alt="Work 2" />
-        <div class="teaser-caption">
-          <span class="category">Live Action</span>
-          <span class="title">Between Realities</span>
-        </div>
-      </a>
-      <a href="works.html" class="work-teaser-card">
-        <img src="images/placeholder4.jpg" alt="Work 3" />
-        <div class="teaser-caption">
-          <span class="category">Animation</span>
-          <span class="title">Liquid Dreams</span>
-        </div>
-      </a>
-    </div>
-  </section>
+  <!-- Removed Featured Works teaser section -->
 
   <!-- Footer -->
   <footer class="footer">
