--- a/ai-films.html
+++ b/ai-films.html
@@ -1,76 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Films | VDO.ape</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI&nbsp;Films – VDO.ape</title>
+  <!-- Google Fonts: Space Grotesk -->
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;700&display=swap" rel="stylesheet" />
+  <!-- Main Stylesheet -->
+  <link rel="stylesheet" href="style.css" />
+  <!-- Inline styles for the AI Films grid -->
+  <style>
+    /* Container for the AI Films page */
+    .films-page {
+      padding-top: 80px;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding-bottom: 4rem;
+    }
+    /* Responsive grid for video cards */
+    .film-grid {
+      display: grid;
+      gap: 2rem;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    }
+    /* Each card holds a video and its title */
+    .film-card {
+      display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
+    }
+    /* Maintain 16:9 ratio for embedded videos */
+    .video-wrapper {
+      position: relative;
+      width: 100%;
+      padding-top: 56.25%; /* 16:9 aspect ratio */
+      overflow: hidden;
+      border-radius: 0.5rem;
+      border: 2px solid var(--gray-light);
+    }
+    .video-wrapper iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    .film-card h3 {
+      margin: 0;
+      font-size: 1rem;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+  </style>
 </head>
 <body>
-<header>
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="ai-films.html" class="active">AI Films</a></li>
-    <li><a href="live-action.html">Live Action</a></li>
-    <li><a href="animation.html">Animation</a></li>
-    <li><a href="documentary.html">Documentary</a></li>
-    <li><a href="branded-content.html">Branded Content</a></li>
-    <li><a href="recognitions.html">Recognitions</a></li>
-    <li><a href="writings.html">Writings</a></li>
-    <li><a href="about.html">About</a></li>
-  </ul>
-</nav>
-</header>
-<main>
-<h1>AI Films</h1>
-<div class="film-grid">
+  <!-- Primary Navigation -->
+  <nav class="nav">
+    <a href="/" >Home</a>
+    <a href="/works.html">Works</a>
+    <a href="/recognitions.html">Recognitions</a>
+    <a href="/writings.html">Writings</a>
+    <a href="/about.html">About</a>
+  </nav>
 
-  <div class="film-card">
-    <div class="video-wrapper">
-      <iframe src="https://www.youtube.com/embed/5NGSUvBVKS0" frameborder="0" allowfullscreen loading="lazy"></iframe>
+  <!-- AI Films content -->
+  <section class="films-page">
+    <h1 class="section-heading">AI Films</h1>
+    <div class="film-grid">
+      <!-- The Native -->
+      <div class="film-card">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/5NGSUvBVKS0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>The Native</h3>
+      </div>
+      <!-- How I Made My AI Animation I Tutorial -->
+      <div class="film-card">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/0EHj9E9240A" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>How I Made My AI Animation I Tutorial</h3>
+      </div>
+      <!-- Shelter From the Storm: start at 9 seconds -->
+      <div class="film-card">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/wousfRoGmhw?start=9" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Shelter From the Storm</h3>
+      </div>
+      <!-- Island at Noon: start at 1 second -->
+      <div class="film-card">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/QOUB78-YZsQ?start=1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Island at Noon</h3>
+      </div>
+      <!-- Paper Boat -->
+      <div class="film-card">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/MvNQHJ9-FBo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Paper Boat</h3>
+      </div>
     </div>
-    <h3>The Native</h3>
-  </div>
+  </section>
 
+  <!-- Footer -->
+  <footer class="footer">
+    <p>&copy; 2025 VDO.ape</p>
+  </footer>
 
-  <div class="film-card">
-    <div class="video-wrapper">
-      <iframe src="https://www.youtube.com/embed/0EHj9E9240A" frameborder="0" allowfullscreen loading="lazy"></iframe>
-    </div>
-    <h3>How I Made My AI Animation I Tutorial</h3>
-  </div>
-
-
-  <div class="film-card">
-    <div class="video-wrapper">
-      <iframe src="https://www.youtube.com/embed/wousfRoGmhw" frameborder="0" allowfullscreen loading="lazy"></iframe>
-    </div>
-    <h3>Shelter From the Storm</h3>
-  </div>
-
-
-  <div class="film-card">
-    <div class="video-wrapper">
-      <iframe src="https://www.youtube.com/embed/QOUB78-YZsQ" frameborder="0" allowfullscreen loading="lazy"></iframe>
-    </div>
-    <h3>Island at Noon</h3>
-  </div>
-
-
-  <div class="film-card">
-    <div class="video-wrapper">
-      <iframe src="https://www.youtube.com/embed/MvNQHJ9-FBo" frameborder="0" allowfullscreen loading="lazy"></iframe>
-    </div>
-    <h3>Paper Boat</h3>
-  </div>
-
-</div>
-</main>
-
-<footer>
-  <p>Contact: lx_kang@naver.com | +86-173-2117-6604 | WeChat: lx_kang4</p>
-  <p>&copy;2025 Alexander Kang. All Rights Reserved.</p>
-</footer>
+  <!-- Optional JavaScript (not needed for this page but included for consistency) -->
+  <script src="main.js"></script>
 </body>
 </html>
