--- a/works.html
+++ b/works.html
@@ -7,15 +7,47 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;700&display=swap" rel="stylesheet" />
   <!-- Main Stylesheet -->
   <link rel="stylesheet" href="style.css" />
+
+  <!-- Inline styles for embedded video cards on the Works page -->
+  <style>
+    /* Video card for AI Films within the works grid */
+    .video-card {
+      display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
+    }
+    .video-card .video-wrapper {
+      position: relative;
+      width: 100%;
+      padding-top: 56.25%; /* 16:9 aspect ratio */
+      overflow: hidden;
+      border-radius: 0.5rem;
+      border: 2px solid var(--gray-light);
+    }
+    .video-card .video-wrapper iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    .video-card h3 {
+      margin: 0;
+      font-size: 0.875rem;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+  </style>
 </head>
 <body>
   <!-- Navigation -->
   <nav class="nav">
-    <a href="index.html">Home</a>
-    <a href="works.html" class="active">Works</a>
-    <a href="recognitions.html">Recognitions</a>
-    <a href="writings.html">Writings</a>
-    <a href="about.html">About</a>
+    <a href="/">Home</a>
+    <a href="/works.html" class="active">Works</a>
+    <a href="/recognitions.html">Recognitions</a>
+    <a href="/writings.html">Writings</a>
+    <a href="/about.html">About</a>
   </nav>
 
   <!-- Works Page Content -->
@@ -33,13 +65,38 @@
     <!-- Works Grid -->
     <div class="works-grid">
       <!-- AI Films -->
-      <div class="work-card" data-category="ai-films">
-        <img src="images/placeholder2.jpg" alt="AI Film 1" />
-        <div class="card-caption">Echoes of Tomorrow</div>
+      <!-- Embedded videos for AI film projects. Each video card maintains a 16:9 ratio and falls within the works grid. -->
+      <div class="video-card" data-category="ai-films">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/5NGSUvBVKS0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>The Native</h3>
       </div>
-      <div class="work-card" data-category="ai-films">
-        <img src="images/placeholder3.jpg" alt="AI Film 2" />
-        <div class="card-caption">Synthetic Horizons</div>
+      <div class="video-card" data-category="ai-films">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/0EHj9E9240A" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>How I Made My AI Animation I Tutorial</h3>
+      </div>
+      <div class="video-card" data-category="ai-films">
+        <div class="video-wrapper">
+          <!-- Start at 9 seconds for Shelter From the Storm -->
+          <iframe src="https://www.youtube.com/embed/wousfRoGmhw?start=9" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Shelter From the Storm</h3>
+      </div>
+      <div class="video-card" data-category="ai-films">
+        <div class="video-wrapper">
+          <!-- Start at 1 second for Island at Noon -->
+          <iframe src="https://www.youtube.com/embed/QOUB78-YZsQ?start=1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Island at Noon</h3>
+      </div>
+      <div class="video-card" data-category="ai-films">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/MvNQHJ9-FBo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Paper Boat</h3>
       </div>
       <!-- Live Action -->
       <div class="work-card" data-category="live-action">
